Finished projective geometry. Changed cls

--- a/Jensen-Lit-Review.tex
+++ b/Jensen-Lit-Review.tex
@@ -9,8 +9,6 @@
 \usepackage{tikz}%       tikz is used by almost everyone, but certainly by me for this.
 \usepackage{pgfplots}%   pgfplots is tikz but better.
 %\usepackage{amsrefs}%   amsrefs contains the .bibtex style content for mathematician papers.
-\usepackage{algorithmic}
-\usepackage{xcolor}
 \usepackage[framemethod=TikZ]{mdframed} %For MD Theorem
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -85,7 +83,7 @@
 \include{./src/chX-jtml}
 
 
-\chapter{EXAMPLES OF EDITOR/Author TOOLS, TABLES, AND IMAGES}% Notice that we can use chapter/section etc breaks in the master file if we want, and then use \input instead of \include to avoid unneccessary page breaks.
+%\chapter{EXAMPLES OF EDITOR/Author TOOLS, TABLES, AND IMAGES}% Notice that we can use chapter/section etc breaks in the master file if we want, and then use \input instead of \include to avoid unneccessary page breaks.
 %\input{editorAndAuthorRemarks}%     Stuff about using editorRemark and authorRemark commands
 %\input{includingTablesExamples}%    Stuff about using Tables.
 %\input{includingImagesExamples}%    Stuff about using Images.
