--- a/src/1-Intro/ch1-lit_review.tex
+++ b/src/1-Intro/ch1-lit_review.tex
@@ -16,5 +16,7 @@ Machine learning algorithms automate the process of analytical model building, u
 \section{Model-Image Registration}
 \subsection{Geometric Transformations}
 \input{src/1-Intro/1-2_model-image-registraion/geometric-transformations.tex}
+\subsection{Image Formation and Camera Properties}
+\input{src/1-Intro/1-2_model-image-registraion/image-formation-and-cameras.tex}
 \subsection{Image Similarity Metrics}
 \input{src/1-Intro/1-2_model-image-registraion/image-similarity-metrics.tex}
