--- a/src/1-Intro/1-2_model-image-registraion/geometric-transformations.tex
+++ b/src/1-Intro/1-2_model-image-registraion/geometric-transformations.tex
@@ -1,7 +1,7 @@
-We start off with a brief overview of different 2D and 3D geometric primitives and transformations and how these can be represented computationally and mathematically.
+Geometric primitives, such as points, are fundamental building blocks for representing shapes and objects in computer graphics. In this section, we will discuss how points can be represented in 2D and 3D space..
 
 \subsubsection{2D and 3D Points}
-A point in N-dimensional space is represented as a set of N scalers, each representing a magnitude in that canonical direction (Eq. \ref{eq:point}).
+In N-dimensional space, a point is represented as a set of N scalars, each representing a magnitude in a particular direction. This can be represented mathematically as a column vector, as shown in Equation \ref{eq:point}. In the case of 2D space, a point is represented as a 2D column vector, $\mathbf{x} = [x , y]^{T}$. Similarly, in 3D space, a point is represented as a 3D column vector, $\mathbf{x} = [x , y , z]^{T}$..
 
 \begin{equation}
     \mathbf{x} = \begin{bmatrix}
@@ -10,7 +10,7 @@ A point in N-dimensional space is represented as a set of N scalers, each repres
     \label{eq:point}
 \end{equation}
 
-A pixel on an image is represented as a 2D point, $\mathbf{x} = [x , y]^{T}$, and a point in space is represented as a 3D point, $\mathbf{x} = [x , y , z]^{T}$. We can also represent these points using \emph{homogeneous coordinates} by adding a scale factor, $\tilde{w}$ (Eq. \ref{eq:homog-point}). Homogeneous points are equivalent up to a scale factor. For most model-image registration, $\tilde{w} = 1$, allowing us to perform rotations and translations simultaneously and successively with matrix multiplications.
+Homogeneous coordinates provide a way to represent points with an additional scale factor, $\tilde{w}$. This allows us to perform rotations and translations simultaneously and successively using matrix multiplications. Homogeneous coordinates for a point in N-dimensional space are represented as a column vector with N+1 elements, as shown in Equation \ref{eq:homog-point}. The homogeneous coordinates for a 2D point and 3D point can be represented as $\tilde{\mathbf{x}} = \tilde{w}\bar{\mathbf{x}}$, where $\tilde{w}\bar{\mathbf{x}} = [\tilde{x_1} , \tilde{x_2}, \dots, \tilde{x_N} , \tilde{w}]^{T}$. In most model-image registration applications, the scale factor $\tilde{w}$ is set to 1..
 
 \begin{equation}
     \tilde{\mathbf{x}} = \begin{bmatrix}
@@ -22,7 +22,7 @@ A pixel on an image is represented as a 2D point, $\mathbf{x} = [x , y]^{T}$, an
 \end{equation}
 
 \subsubsection{2D Transformations}
-The most basic transformation is a translation, which is simply adding two vectors together (Eq. \ref{eq:translation}).
+Transformations are operations that change the position, orientation, or shape of an object in 2D space. One of the most basic transformations is a translation, which moves an object by adding a displacement vector to its position. This can be expressed mathematically as shown in Equation \ref{eq:translation}:
 
 \begin{equation}
     \begin{aligned}
@@ -38,7 +38,9 @@ The most basic transformation is a translation, which is simply adding two vecto
     \label{eq:translation}
 \end{equation}
 
-Next, we have a \emph{rotation transform}, which changes the orientation of the object, but not the shape (Eq. \ref{eq:2d-rot}, \ref{eq:2d-rot-mat}). 
+In this equation, $\mathbf{x}$ is the original position of the object, $\mathbf{x'}$ is the transformed position, and $\mathbf{t}$ is the displacement vector that specifies the amount of translation in the $x$ and $y$ directions. The identity matrix $\mathbf{I}$ is used when expressing the transformation using matrix multiplication, as it represents the identity transformation in the $x$ and $y$ dimensions. Using homogeneous coordinates and matrix multiplication allows for the convenient representation of multiple transformations as a single matrix multiplication, as well as for the composition of transformations (i.e., performing multiple transformations in a specific order).
+
+The next type of 2D transformation is a rotation, which changes the orientation of an object, but not its shape (Eq. \ref{eq:2d-rot}, \ref{eq:2d-rot-mat}). 
 
 \begin{equation}
     \begin{aligned}
@@ -57,7 +59,8 @@ where
 
 This will rotate an object $\theta$ in the counter clockwise direction. 
 
-A translation and rotation can be performed together by replacing the $\mathbf{I}$ in Eq. \ref{eq:translation} with $\mathbf{R}$ from Eq. \ref{eq:2d-rot-mat}. (Eq. \ref{eq:2d-rot-trans}), this transformation preserves lengths and angles.
+It's also possible to perform a rotation and a translation at the same time, by replacing the identity matrix $\mathbf{I}$ in Equation \ref{eq:translation} with the rotation matrix $\mathbf{R}$ from Equation \ref{eq:2d-rot-mat}. This results in the transformation shown in Equation \ref{eq:2d-rot-trans}. This transformation preserves lengths and angles.
+
 \begin{equation}
     \mathbf{x}' = \begin{bmatrix}
         \mathbf{R}_{2 \times 2} & \mathbf{t}
@@ -87,3 +90,75 @@ An affine transformation preserves parallelism, and is simply a pre-multiplicati
     \end{aligned}
     \label{eq:2d-affine}
 \end{equation}
+
+A projection matrix (or perspective transformation) is one that operates on homogeneous coordinates (Eq. \ref{eq:2d-projection}).
+
+\begin{equation}
+    \begin{aligned}
+        \tilde{\mathbf{x}}' &= \tilde{\mathbf{H}}\tilde{\mathbf{x}}\\
+    \end{aligned}
+    \label{eq:2d-projection}
+\end{equation}
+
+To obtain inhomogeneous results, the resultant $\tilde{\mathbf{x}}'$ must be normalized (Eq. \ref{eq:2d-homog-norm}). A projective transformation preserves straight lines.
+
+\begin{equation}
+    \begin{aligned}
+        x'&= \frac{\tilde{x}}{\tilde{w}}  &  y' &= \frac{\tilde{y}}{\tilde{w}}\\
+        &= \frac{h_{11}x + h_{12}y + h_{13}}{h_{31}x + h_{32}y + h_{33}} &  &= \frac{h_{21}x + h_{22}y + h_{23}}{h_{31}x + h_{32}y + h_{33}}
+    \end{aligned}
+    \label{eq:2d-homog-norm}
+\end{equation}
+
+\subsubsection{3D Transformations}
+
+3D transformations operate on 3D points (Eq. \ref{eq:point}) in a similar way to 2D transformations. In general, all types of transformations, including translations, rotations, scaled rotations, and projections, can be represented by matrices in 3D space, with the only difference being that the dimensions are increased by one.
+
+One aspect of 3D rotations that adds complexity is the possibility of multiple axes of rotation. This introduces the issue of non-commutativity, which means that the order in which rotations are applied matters. To handle this, we can use the concept of Euler angles, which represent the rotations as composite rotations about canonical axes. These rotations are represented by matrices (Eq. \ref{eq:euler-angles}). Note that these matrices are post-multiplied by each other to determine the final rotation matrix for object-centered rotations. Additionally, given a rotation matrix and the corresponding Euler rotations, it is possible to decompose the matrix into its composite rotations about the canonical axes.
+
+\begin{equation}
+    \begin{aligned}
+        R_{x} &= \begin{bmatrix}
+            1 & 0 & 0 \\ 0 & c_x & -s_x \\ 0 & s_x & c_x
+        \end{bmatrix}
+        &R_{y} &= \begin{bmatrix}
+            c_y & 0 & s_y \\ 0 & 1 & 0 \\ -s_y & 0 & c_y
+        \end{bmatrix}
+        &R_{z} &= \begin{bmatrix}
+            c_z & -s_z & 0 \\ s_z & c_z & 0 \\ 0 & 0 & 1
+        \end{bmatrix} \\
+    \end{aligned}
+    \label{eq:euler-angles}
+\end{equation}
+
+
+\paragraph*{3D to 2D Projections}
+Geometric primitives, such as points, lines, and polygons, are the building blocks of computer graphics. These basic shapes can be transformed and combined in various ways to create more complex objects and scenes. In order to represent these 3D primitives and objects in 2D image space, we must apply transformations that manipulate their position, orientation, and other properties. By using these transformations, we can create the illusion of depth and spatial relationships on a flat display. Understanding how to work with primitives and transform them is crucial for creating a wide range of visual effects and graphics in computer graphics.
+
+In computer graphics, one of the most basic methods of projecting three-dimensional objects onto a two-dimensional image plane is an orthographic projection. This projection simply drops the depth component of the object and flattens it onto the image plane (Eq. \ref{eq:orthographic-proj}. This can be thought of as mimicking a camera with a long focal length, or when the depth of the object is shallow compared to its distance from the camera (also known as a weak perspective projection). In this equation, $\mathbf{p}$ represents a point in 3D space and $\mathbf{x}$ represents the projected point in 2D image space.
+
+\begin{equation}
+    \tilde{\mathbf{x}} = \begin{bmatrix}
+        1 & 0 & 0 & 0 \\ 0 & 1 & 0 & 0 \\ 0 & 0 & 0 & 1
+    \end{bmatrix}\tilde{\mathbf{p}}
+    \label{eq:orthographic-proj}
+\end{equation}
+
+Perspective projection 
+The most common 3D-2D projection is \emph{perspective projeciton}, which mimics how human's normally see by taking depth-perception into account. This can be done by scaling each point by it's $z$ position relative to the camera (Eq. \ref{eq:perspective-proj}). We can also perform this using homogeneous coordinates (Eq. \ref{eq:perspective-matrix}).
+
+\begin{equation}
+    \bar{\mathbf{x}} = \mathcal{P}_z(\mathbf{p}) = \begin{bmatrix}
+        x/z \\ y/z \\ 1
+    \end{bmatrix}
+    \label{eq:perspective-proj}
+\end{equation}
+
+\begin{equation}
+    \tilde{\mathbf{x}} = \begin{bmatrix}
+        1 & 0 & 0 & 0 \\ 0 & 1 & 0 & 0 \\ 0 & 0 & 1 & 0 
+    \end{bmatrix}\tilde{\mathbf{p}}
+    \label{eq:perspective-matrix}
+\end{equation}
+
+The perspective projection is the cornerstone of model-image registration. If a matrix can be created that mimics the fluoroscopic imaging setup in the clinic, then this offers a strong possibility of re-creating a virtual scene with the same geometry as the actual scene.
