--- a/src/1-Intro/ch1-lit_review.tex
+++ b/src/1-Intro/ch1-lit_review.tex
@@ -18,5 +18,7 @@ Machine learning algorithms automate the process of analytical model building, u
 \input{src/1-Intro/1-2_model-image-registraion/geometric-transformations.tex}
 \subsection{Image Formation and Camera Properties}
 \input{src/1-Intro/1-2_model-image-registraion/image-formation-and-cameras.tex}
+\subsection{Image Processing}
+\input{src/1-Intro/1-2_model-image-registraion/image-processing.tex}
 \subsection{Image Similarity Metrics}
 \input{src/1-Intro/1-2_model-image-registraion/image-similarity-metrics.tex}
