--- a/src/1-Intro/1-2_model-image-registraion/image-processing.tex
+++ b/src/1-Intro/1-2_model-image-registraion/image-processing.tex
@@ -8,8 +8,93 @@ The most widely used filter is a linear filter \cite{szeliskiComputerVisionAlgor
 \begin{equation}
     \begin{aligned}
         g(i,j) &= \sum_{k,l}f(i-k,j-l)h(k,l) \\
-        &= \sum_{k,l}f(k,l)h(i-k,j-l)
+        &= \sum_{k,l}f(k,l)h(i-k,j-l) \\
+        &\text{Where we use the following notation}\\
+        g&= f * h
     \end{aligned}
     \label{eq:convolution}
 \end{equation}
 
+The convolution operation is \emph{linear shift invariant}, which means that it obeys the superposition principle (Eq. \ref{eq:superposition}) and the shift invariance principle (Eq. \ref{eq:shift-invariance}). This is a powerful property, because it will behave the same everywhere on the input signal/image, which is useful for different types of feature extraction and filtering operations.
+
+\begin{equation}
+    h *(f + g) = h*f + h*g
+    \label{eq:superposition}
+\end{equation}
+
+\begin{equation}
+    g(i,j) = f(i+k,j+l) \Longleftrightarrow (h*g)(i,j) = (h*f)(i+k,j+l)
+    \label{eq:shift-invariance}
+\end{equation}
+
+A common filter applied to images is the Gaussian kernel (Eq. \ref{eq:gaussian-kernal}). This kernel is shaped as a 2D discrete Gaussian, and has the effect of blurring an image and removing noise.
+
+\begin{equation}
+    \frac{1}{256}\begin{bmatrix}
+        1 & 4 & 6 & 4 & 1 \\
+        4 & 16 & 24 & 16 & 4\\
+        6 & 24 & 36 & 24 & 6\\
+        4 & 16 & 24 & 16 & 4\\
+        1 & 4 & 6 & 4 & 1 \\
+    \end{bmatrix}
+    \label{eq:gaussian-kernal}
+\end{equation}
+
+Another is the box kernel, which averages the value of the nearest K pixels (Eq. \ref{eq:box-filter}).
+
+\begin{equation}
+    \frac{1}{K^{2}}\begin{bmatrix}
+        1 & 1 & \cdots &1\\
+        1 & 1 & \cdots &1 \\
+        \vdots & \vdots & 1 & \vdots \\
+        1 & 1 & \cdots & 1
+    \end{bmatrix}
+    \label{eq:box-filter}
+\end{equation}
+
+Edge filters can also be created to detect vertical (Eq. \ref{eq:vert-edge-filter}), horizontal (Eq. \ref{eq:horiz-edge-filter}), or diagonal edges (Eq. \ref{eq:diag-edge-filter}). As each of the filters moves across the feature it is designed for, that region of the output will be more highly activated than other regions, extracting out the desired components. The orientation of each of these filters can be hand-selected to find desirable attributes in images.
+
+\begin{equation}
+    \text{vertical edge filter} = \begin{bmatrix}
+            0 & 1 & 0 \\
+            0 & 1 & 0 \\
+            0 & 1 & 0 \\
+    \end{bmatrix}
+    \label{eq:vert-edge-filter}
+\end{equation}
+
+\begin{equation}
+    \text{horizontal edge filter} =\begin{bmatrix}
+        0 & 0 & 0 \\
+        1 & 1 & 1 \\
+        0 & 0 & 0 \\
+    \end{bmatrix}
+    \label{eq:horiz-edge-filter}
+\end{equation}
+
+\begin{equation}
+    \begin{aligned}
+        \text{diagonal edge filters} = \begin{bmatrix}
+            1 & 0 & 0 \\
+            0 & 1 & 0\\
+            0 & 0 & 1
+        \end{bmatrix}& \text{and} & 
+        \begin{bmatrix}
+            0 & 0 & 1 \\
+            0 & 1 & 0\\
+            1 & 0 & 0
+        \end{bmatrix}
+    \end{aligned}
+    \label{eq:diag-edge-filter}
+\end{equation}
+
+Lastly, we can use a corner filter to find corners in images (Eq. \ref{eq:corner-filter}).
+
+\begin{equation}
+    \frac{1}{4}\begin{bmatrix}
+        1 & -2 & 1 \\
+        -2 & 4 & -2 \\
+        1 & -2 & 1 \\
+    \end{bmatrix}
+    \label{eq:corner-filter}
+\end{equation}
