--- a/src/myBib.bib
+++ b/src/myBib.bib
@@ -1206,6 +1206,15 @@
   file = {C\:\\Users\\ajensen123\\Zotero\\storage\\KGMLGCVV\\Freeman and Pinskerova - 2005 - The movement of the normal tibio-femoral joint.pdf}
 }
 
+@phdthesis{freemanSteerableFiltersLocal1992,
+  title = {Steerable {{Filters}} and {{Local Analysis}} of {{Image Structure}}},
+  author = {Freeman, William Tafel},
+  year = {1992},
+  abstract = {Two paradigms for visual analysis are top-down, starting from high-level models or information about the image, and bottom-up, where little is assumed about the image or objects in it. We explore a local, bottom-up approach to image analysis. We develop operators to identify and classify image junctions, which contain important visual cues for identifying occlusion, transparency, and surface bends.},
+  langid = {english},
+  file = {C\:\\Users\\ajensen123\\Zotero\\storage\\HKHFP22A\\Freeman - Steerable Filters and Local Analysis of Image Stru.pdf}
+}
+
 @article{freglyComputationalWearPrediction2005,
   title = {Computational Wear Prediction of a Total Knee Replacement from in Vivo Kinematics},
   author = {Fregly, Benjamin J. and Sawyer, W.Gregory and Harman, Melinda K. and Banks, Scott A.},
@@ -2877,6 +2886,23 @@
   file = {C\:\\Users\\ajensen123\\Zotero\\storage\\JSKZ4G3W\\The Next Wave of Hospital Innovation to Make Patie.pdf}
 }
 
+@incollection{nielsenRegularizationScalespaceEdge1996,
+  title = {Regularization, Scale-Space, and Edge Detection Filters},
+  booktitle = {Computer {{Vision}} \textemdash{} {{ECCV}} '96},
+  author = {Nielsen, Mads and Florack, Luc and Deriche, Rachid},
+  editor = {Goos, Gerhard and Hartmanis, Juris and {van Leeuwen}, Jan and Buxton, Bernard and Cipolla, Roberto},
+  year = {1996},
+  volume = {1065},
+  pages = {70--81},
+  publisher = {{Springer Berlin Heidelberg}},
+  address = {{Berlin, Heidelberg}},
+  doi = {10.1007/3-540-61123-1_128},
+  abstract = {Computational vision often needs to deal with derivatives of digital images. Such derivatives are not intrinsic properties of digital data; a paradigm is required to make them well-defined. Normally, a linear filtering is applied. This can be formulated in terms of scale-space, functional minimization, or edge detection filters. The main emphasis of this paper is to connect these theories in order to gain insight in their similarities and differences. We do not want, in this paper, to take part in any discussion of how edge detection must be performed, but will only link some of the current theories. We take regularization (or functional minimization) as a starting point, and show that it boils down to Gaussian scale-space if we require scale invariance and a semi-group constraint to be satisfied. This regularization implies the minimization of a functional containing terms up to infinite order of differentiation. If the functional is truncated at second order, the Canny-Deriche filter arises. It is also shown that higher dimensional regularization boils down to a rotated version of the one dimensional case, when Cartesian invariance is imposed and the image is vanishing at the borders. This means that the results from 1D regularization can be easily generalized to higher dimensions. Finally we show how an efficient implementation of regularization of order n can be made by recursive filtering using 2n multiplications and additions per output element without introducing any approximation.},
+  isbn = {978-3-540-61123-3 978-3-540-49950-3},
+  langid = {english},
+  file = {C\:\\Users\\ajensen123\\Zotero\\storage\\Y52MN9LG\\Nielsen et al. - 1996 - Regularization, scale-space, and edge detection fi.pdf}
+}
+
 @article{niesenReorientingTibialBaseplate2020,
   title = {Reorienting the Tibial Baseplate Improves the Registration Accuracy of Model-Based Radiostereometric Analysis},
   author = {Niesen, Abigail E. and Garverick, Anna L. and Howell, Stephen M. and Hull, Maury L.},
@@ -3904,6 +3930,21 @@
   abstract = {We propose a new method for estimation in linear models. The 'lasso' minim residual sum of squares subject to the sum of the absolute value of the coefficients than a constant. Because of the nature of this constraint it tends to produce coefficients that are exactly 0 and hence gives interpretable models. Our simulatio suggest that the lasso enjoys some of the favourable properties of both subset sele ridge regression. It produces interpretable models like subset selection and exh stability of ridge regression. There is also an interesting relationship with recent adaptive function estimation by Donoho and Johnstone. The lasso idea is quite ge can be applied in a variety of statistical models: extensions to generalized regressio and tree-based models are briefly described.},
   langid = {english},
   file = {C\:\\Users\\ajensen123\\Zotero\\storage\\T3U6SKDB\\Tibshirani - 1996 - Regression Shrinkage and Selection Via the Lasso.pdf}
+}
+
+@inproceedings{tomasiBilateralFilteringGray1998,
+  title = {Bilateral Filtering for Gray and Color Images},
+  booktitle = {Sixth {{International Conference}} on {{Computer Vision}} ({{IEEE Cat}}. {{No}}.{{98CH36271}})},
+  author = {Tomasi, C. and Manduchi, R.},
+  year = {1998},
+  pages = {839--846},
+  publisher = {{Narosa Publishing House}},
+  address = {{Bombay, India}},
+  doi = {10.1109/ICCV.1998.710815},
+  abstract = {Bilateral filtering smooths images while preserving edges, by means of a nonlinear combination of nearby image values. The method is noniterative, local, and simple. It combines gray levels or colors based on both their geometric closeness and their photometric similariv, and prefers near values to distant values in both domain and range. In contrast with filters that operate on the three bands of a color image separately, a bilateral filter can enforce the perceptual metric underlying the CIE-Lab color space, and smooth colors and preserve edges in a way that is tuned to human perception. Also, in contrast with standardjltering, bilateral filtering produces no phantom colors along edges in color images, and reduces phantom colors where they appear in the original image.},
+  isbn = {978-81-7319-221-0},
+  langid = {english},
+  file = {C\:\\Users\\ajensen123\\Zotero\\storage\\J5HZNLM6\\Tomasi and Manduchi - 1998 - Bilateral filtering for gray and color images.pdf}
 }
 
 @article{torryHighKneeValgus2013,
